--- a/style.css
+++ b/style.css
@@ -5,10 +5,24 @@
 
 .container{
     position:relative;
+    width:96%;
 }
 .canvas{
   width:100%;
   min-height:600px;
+}
+
+.key{
+  position:absolute;
+  width:200px;
+  height:500px;
+  /*float:right;*/
+  right:0px;
+  top:200px;
+}
+
+.key-instance .key-attr{
+  font-size:16px;
 }
 
 .info, #desc{
