--- a/style.css
+++ b/style.css
@@ -23,25 +23,41 @@
   position:absolute;
   width:200px;
   height:500px;
-  top:175px;
+  top:150px;
   cursor:default;
 }
 
-/*#key-title{
-  padding-bottom:10px;
-}*/
+.key-group, .key-instance, .key-attr{
+  font-size:14px;
+  display:block;
+  position: relative;
+  left: 10px;
+}
 
-.key-instance .key-attr{
-  font-size:16px;
+#title-instance{
+  padding-top:10px;
+}
+
+#title-attr{
+  padding-top:10px;
+}
+
+#title-group, #title-instance, #title-attr{
+  font-size:18px;
+  font-weight:bold;
   display:block;
 }
 
-#public_transportation{
-  padding-bottom:10px;
-}
-
-#with-others{
-  padding-top:10px;
+#supplement{
+  /*float:right;*/
+  position:absolute;
+  top:150px;
+  right:100px;
+  text-align:right;
+  font-size:18px;
+  font-weight:bold;
+  opacity:0.7;
+  color:#636466;
 }
 
 .info, #desc{
